--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -6,7 +6,7 @@
     gap: 2em;
 }
 /* xs */
-@media (min-width: 475px) {
+@media (min-width: 375px) {
     .about__img{
         width: 25rem;
         height: 25rem;
@@ -36,6 +36,36 @@
     }  
 }
 
+
+@media (min-width: 475x) {
+    .about__img{
+        width: 25rem;
+        height: 25rem;
+        object-fit: cover;
+        margin: 0 auto;
+    }
+    .about__title {
+        color: var(--clr-sky500);
+    }
+    
+    .about__description {
+        color: var(--clr-zinc700);
+        margin-top: 1em;
+        font-size:var(--size-sm);
+    
+    }
+    .about__line {
+        border: 0.5px var(--clr-sky500) solid;
+        padding-left: 1.5em;
+    }
+    .about__btn {
+        width: 9em;
+        margin: 0 auto;
+        margin-top: 1em;
+        font-size: var(--size-base);
+        color: var(--clr-slate5) !important;
+    }  
+}
 
 /* sm */
 @media (min-width: 640px) {
