--- a/styles/util.css
+++ b/styles/util.css
@@ -49,6 +49,15 @@
                   0 10px 10px rgba(59, 130, 246, 0.22),
  }
 /* xs */
+
+
+
+@media (min-width: 275px) {
+    .container{
+        max-width: 275px;
+    }
+}
+
 @media (min-width: 375px) {
     .container{
         max-width: 375px;
