--- a/styles/util.css
+++ b/styles/util.css
@@ -52,6 +52,11 @@
 
 
 
+@media (min-width: 275px) {
+    .container{
+        max-width: 320px;
+    }
+}
 
 @media (min-width: 375px) {
     .container{
