--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -55,6 +55,28 @@
     }
 }
 
+@media (min-width: 375px) {
+    .hero {
+        gap: 1.5rem;
+    }
+    .hero__img{
+        width: 6.5rem;
+        height: 6.5rem;
+    }
+    .hero__subtitle {
+        font-size: var(--size-lg);
+    }
+
+    .hero__title {
+        font-size: var(--size-4xl);
+    }
+    
+    .hero__btn{
+        font-size: var(--size-base);
+        color: var(--clr-slate5) !important;
+    }
+}
+    
 @media (min-width: 475px) {
     .hero {
         gap: 1.5rem;
